# GSIClient

./: .editorconfig  .gitignore  Cargo.toml  README.md  flake.nix  justfile
assets/overlay/: index.css  index.html  index.js
client/: Cargo.toml
client/src/: config.rs  lib.rs  main.rs
client/src/gsi/: mod.rs
client/src/gui/: gsi_gui.rs  mod.rs
client/src/logger/: mod.rs
client/src/server/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/overlay/: Cargo.toml  index.html
crates/overlay/src/: main.rs  util.rs  websocket.rs
crates/overlay/src/components/: mod.rs  time_display.rs  title.rs
src/: args.rs  config.rs  lib.rs  logger.rs  main.rs
src/gsi/: mod.rs
src/gui/: client.rs  colors.rs  gsi_gui.rs  mod.rs  tab.rs
src/gui/components/: mod.rs  panel_bottom.rs  panel_center.rs  panel_header.rs
src/logger/: logs.rs  mod.rs
src/server/: mod.rs
