[workspace]
members = ["client", "crates/common", "crates/overlay"]
resolver = "2"

[profile.release]
opt-level = "s"

[workspace.dependencies]
color-eyre = "0.6.2"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
gokz_rs = { version = "0.20.0", features = ["global_api"] }

