[package]
name = "schnose-gsi-client"
version = "2.0.0"
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
description = "Desktop App for CS:GO KZ streamers"
documentation = "https://github.com/Schnose/GSIClient/wiki"
readme = "../README.md"
homepage = "https://github.com/Schnose"
repository = "https://github.com/Schnose/GSIClient"
license-file = "../LICENSE"
publish = false

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
color-eyre = { workspace = true }

clap = { workspace = true }

tokio = { workspace = true }
lazy_static = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
time = { workspace = true }
url = { workspace = true }

gokz_rs = { workspace = true }
schnose_gsi = { workspace = true }

eframe = { workspace = true }
egui_extras = { workspace = true }
catppuccin-egui = { workspace = true }
rfd = { workspace = true }

schnose-gsi-client-common = { path = "../crates/common" }
axum = { version = "0.6.18", features = ["macros", "ws", "tracing"] }
futures = "0.3.28"

