[package]
name = "schnose-gsi-client-common"
version = "1.0.0"
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
documentation = "https://github.com/Schnose/GSIClient/wiki"
readme = "../../README.md"
homepage = "https://github.com/Schnose"
repository = "https://github.com/Schnose/GSIClient"
license-file = "../../LICENSE"
publish = false

[dependencies]
serde = { workspace = true }
gokz_rs = { version = "0.20.0", features = ["global_api"] }

